--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       await OneSignal.init({
         appId: "7304d154-c777-4f86-b61a-5a6e88976cd9",
         allowLocalhostAsSecureOrigin: true,
-        serviceWorkerPath: "/OneSignalSDKWorker.js",
+        serviceWorkerPath: "/custom-sw.js",
         serviceWorkerParam: { scope: "/" },
         notifyButton: { enable: false }
       });
